# pydra-nipype1

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  codecov.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  pythonpackage.yml
pydra/tasks/: __init__.py
pydra/tasks/nipype1/: __init__.py  _version.py  converter_fsl.py  converter_sem.py  utils.py
pydra/tasks/nipype1/tests/: __init__.py  test_nipype1task.py
