[metadata]
author = Chris Markiewicz
author_email = markiewicz@stanford.edu
description = Tools for importing nipype 1.x interfaces into Pydra

[options]
python_requires = >=3.7
install_requires =
    pydra @ git+https://github.com/effigies/pydra.git@85f9eeae02ec6b6c6893b8216b4e1f97219c7e2c
    nipype
packages = pydra.tasks.nipype1

[options.extras_require]
test =
    pytest
dev =
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = pydra/tasks/nipype1/_version.py
versionfile_build = pydra/tasks/nipype1/_version.py
tag_prefix =
parentdir_prefix =
